[[bin]]
name = "server"
path = "src/server/bin/server.rs"

[[bin]]
name = "client"
path = "src/client/bin/client.rs"

[[bin]]
name = "relay"
path = "src/relay/bin/relay.rs"

[package]
name = "gol-multi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.1"
crossterm = "0.27.0"
sha1 = "0.10.6"
